# athena-loops

./: .gitignore  README.md  pyproject.toml
agentloop/: __init__.py  agent.py  cli.py  interaction.py  mcp_server.py  orchestrator.py  roles.py  runs.py  scheduler.py  types.py  verifier.py  worktree.py
agentloop/adapters/: __init__.py  claude.py  cli.py  mock.py
examples/: run_demo.py  run_with_cli_agent.py
tests/: conftest.py  test_cli.py  test_cli_agent.py  test_cli_resolve.py  test_interaction.py  test_mcp_server.py  test_orchestrator.py  test_rehydration.py  test_runs.py  test_worktree.py
